# cairn

./: .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: frq.ipynb  io.ipynb  pca.ipynb
notebooks/results_cache/pca_v1/: 615ccfcbea536185bea2a77dda131267-data.csv  615ccfcbea536185bea2a77dda131267-evr.npy  cce542dac2f0dee394660f9fdc87992d-data.csv  cce542dac2f0dee394660f9fdc87992d-evr.npy
src/cairn/: __init__.py  frq.py  io.ipynb  io.py  njt.py  pca.py  snps.py  utils.py
src/cairn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cairn/config/: default.yaml
src/cairn/utils/: __init__.py
