[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn"
version = "0.1.0"
description = "A toolkit for accessing and analysing Zarr arrays of genomic data"
authors = [
    {name="Tristan Dennis", email="tristanpwdennis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-allel",
    "numpy",
    "pandas",
    "zarr",
    "plotly",
    "seaborn",
    "dask",
    "cartopy",
    "xarray",
    "sgkit",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]
